Update NuvlaBox use cases page to include link to street lighting solution brief Update solutions drop down on nav bar

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -32,10 +32,10 @@
         <li id="nav-solutions" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solutions <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/products/nuvlabox/usecases/#Smart-Cities"><b>Smart Cities</b>: Cyber Intrusion Solutions</a></li>
-            <li><a href="/products/nuvlabox/usecases/#Security-Installations"><b>Security Installations</b>: Surveillance, control, protection</a></li>
-            <li><a href="http://media.sixsq.com/it-for-education-in-remote-areas"><b>Education and e-learning</b>: Simple content delivery</a></li>
-            <li><a href="/products/nuvlabox/usecases/#Putting-Intelligence-at-the-Edge-of-the-Network"><b>Edge Computing</b>: Power at the edge of the network</a></li>
+			  <li><a href="/products/nuvlabox/usecases/#30%-Energy-Savings-Thanks-To-Smart-Lighting-Solution"><b>Smart Cities</b>: Smart Street Lighting</a></li>
+            <li><a href="/products/nuvlabox/usecases/#Securing-Smart-City-Solutions"><b>Smart Cities</b>: Cyber Intrusion & Security Installations</a></li>
+            <li><a  href="http://media.sixsq.com/it-for-education-in-remote-areas"><b>Education and e-learning</b>: Simple content delivery</a></li>
+            <li><a href="/products/nuvlabox/usecases/#Giving-an-Edge-to-Satellite-Services"><b>Edge Computing</b>: Power at the edge of the network</a></li>
           </ul>
           <span></span>
         </li>
