Update photo of NB mini on welcome page and NB overview page

--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -13,16 +13,16 @@
 
         <div class="container">
             <div style="background-color: white; padding: 10px" class="row row-highlights">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                   <center>
-                      <h3>NuvlaBox v2</h3>
+                      <h3>NuvlaBox Standard</h3>
                       <img src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
                   </center>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                   <center>
                       <h3>NuvlaBox Mini</h3>
-                      <img src="/img/content/nuvlabox/nuvlabox-mini.png" alt="NuvlaBox mini photo" />
+                      <img src="/img/content/nuvlabox/nuvlabox-mini-v2.png" alt="NuvlaBox mini photo" />
                   </center>
                 </div>
             </div>
@@ -119,7 +119,7 @@ For most smaller organisations, the cost of a private cloud infrastructure is pr
                   Designed in Switzerland, made in Europe
                 </h2>
                 <p>
-                  The hardware of the NuvlaBox v2 and Mini appliances are the result of a fruitful collaboration between SixSq and <a href="http://logicsupply.com">Logic Supply</a> from Holland. Here is another example of SixSq, working closely with partners, taking in this case advantage of the experience of an expert in the field of hardware design, integration and products logistics.
+                  The hardware of the NuvlaBox Standard and Mini appliances are the result of a fruitful collaboration between SixSq and <a href="http://logicsupply.com">Logic Supply</a> from Holland. Here is another example of SixSq, working closely with partners, taking in this case advantage of the experience of an expert in the field of hardware design, integration and products logistics.
                 </p>
               </div>
               <div class="col-md-6 col-2-image">
