--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -4,6 +4,12 @@
   {% include head.html %}
 
   <body>
+    
+  	<div class="bg">
+    TOTO
+    </div>
+    
+    
 
     {% include top.html %}
 
@@ -134,13 +140,13 @@
           <h2>Smart Cloud-in-a-box Appliance</h2>
           <div style="background-color: white; padding: 20px">
               <div style="padding-bottom: 20px;" class="row row-summary">
-                  <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center>
                         <h3>NuvlaBox Standard</h3>
                         <img class="img-responsive" src="/img/content/nuvlabox/nuvlabox-v2.png" alt="NuvlaBox photo" />
                     </center>
                   </div>
-                  <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center>
                         <h3>NuvlaBox Mini</h3>
                         <img src="/img/content/nuvlabox/nuvlabox-mini-v2.png" alt="NuvlaBox mini photo" />
