Update NuvlaBox use cases page to include Volumlight product name and improved links to Schreder

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -17,13 +17,13 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products &amp; Services<span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li role="menuitem">
-              <a href="/products/slipstream"><b>SlipStream&reg;</b>: Smart cloud application management</a>
-            </li>
-            <li>
               <a href="/products/nuvlabox"><b>NuvlaBox&reg;</b>: Smart Cloud-in-a-box Appliance</a>
             </li>
             <li>
             <a href="/services/nuvla"><b>Nuvla&trade;</b>: Smart Cloud Brokerage</a>
+              <a href="/products/slipstream"><b>SlipStream&reg;</b>: Smart cloud application management</a>
+            </li>
+            <li>
             </li>
             </li>
           </ul>
@@ -32,8 +32,8 @@
         <li id="nav-solutions" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Solutions <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-			  <li><a href="/products/nuvlabox/usecases/#30%-Energy-Savings-Thanks-To-Smart-Lighting-Solution"><b>Smart Cities</b>: Smart Street Lighting</a></li>
-            <li><a href="/products/nuvlabox/usecases/#Securing-Smart-City-Solutions"><b>Smart Cities</b>: Cyber Intrusion & Security Installations</a></li>
+			  <li><a href="/products/nuvlabox/usecases/#30%-Energy-Savings-Thanks-To-Smart-Lighting-Solution"><b>Smart Cities</b>: Volumlight&trade; Smart Street Lighting</a></li>
+            <li><a href="/products/nuvlabox/usecases/#S"><b>Smart Cities</b>: Cyber Intrusion & Security Installations</a></li>
             <li><a  href="http://media.sixsq.com/it-for-education-in-remote-areas"><b>Education and e-learning</b>: Simple content delivery</a></li>
             <li><a href="/products/nuvlabox/usecases/#Giving-an-Edge-to-Satellite-Services"><b>Edge Computing</b>: Power at the edge of the network</a></li>
           </ul>
@@ -58,12 +58,12 @@
 		            <div class="col-sm-6">
 			            <ul class="multi-column-dropdown">
                     <li><!--<a href="/resources/for-developers/overview">--><strong>For Developers</strong><!--</a>--></li>
-                    <li><a href="http://ssdocs.sixsq.com/en/latest/advanced_tutorial/index.html">Tutorials</a></li>
+                    <li><a href="http://ssdocs.sixsq.com/en/latest/tutorials/index.html">Tutorials</a></li>
                     <li><a href="http://ssdocs.sixsq.com/en/latest/">Documentation</a></li>
                     <li><a href="http://ssapi.sixsq.com/">API</a></li>
                     <li><a href="http://ssdocs.sixsq.com/en/latest/administrator_guide/quick_installation.html">Install SlipStream</a></li>
-                    <li><a href="http://support.sixsq.com/">Support</a></li>
-                    <li><a href="http://support.sixsq.com/">FAQ</a></li>
+                    <li><a href="http://support.sixsq.com/support/tickets/new">Support</a></li>
+                    <li><a href="http://support.sixsq.com/support/solutions/folders/5000158686">FAQ</a></li>
 			            </ul>
 		            </div>
 	            </div>
