--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -224,16 +224,16 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h2>Swiss Space Industry Days</h2>
+                    <h2>Smart City Day 2017</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/space.jpeg" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo-scd-17.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Challenges and Opportunities in the era of New Space. Get the latest nformation on various European Space programs and exchange experiences on the fast changing space landscape.</p>
+                  <p>Sign up for the 4th edition of Smart City Day in Geneva! Learn, work exchange and network with experts in the field. Don't forget to stop by the SixSq stand.
                       <center>
-                            <a class="btn btn-primary btn-lg" role="button" href="https://www.b2match.eu/ssid2017">Learn more &raquo;</a>
+                            <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/08/29/news-smart-city-day-2017.html">Learn more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
@@ -245,18 +245,17 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>Latest Blog</h2>
-                     <h2>What is Edge Computing?</h2>
-                        <h3>By Marc-Elian Bégin</h3>
+                    <h2>Latest News</h2>
+                     <h2>SixSq Featured in Euresearch Success Story</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/Globe_connected_cities.jpg" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/euresearch_nuvlabox.jpg" alt="blog"/></center>
                   </div>
                 </div>
                 </div>
-                <p>Edge Computing is the latest buzz in the ICT world. Find out what it's all about and why transforming data at the edge is so important. </p>
+                <p>Thanks to its contribution to a project working on the security of critical infrastructures and industrial systems, SixSq has been showcased in a Euresearch article.</p>
                 <center>  
-                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/what-is-edge-computing">Read more &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/08/28/news-euresearch-success-story.html">Read more &raquo;</a>
                 </center>
               </div>
             </div>
