Update welcome page to show Innovation Radar vote

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -223,17 +223,16 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>What's coming up?</h2>
-                    <h2>Smart City Day 2017</h2>
+                    <h2>Vote for SixSq!</h2>
+                    <h2>Innovation Radar Prize 2017</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo-scd-17.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_innovation_radar.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Sign up for the 4th edition of Smart City Day in Geneva! Learn, work exchange and network with experts in the field. Don't forget to stop by the SixSq stand.
-                      <center>
-                            <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/08/29/news-smart-city-day-2017.html">Learn more &raquo;</a>
+                  <p>Take a minute to vote for SixSq so that we can be one of the winners in the Industrial &amp; Enabling Tech category. Support technology that enables energy efficiency!<center>
+                            <a class="btn btn-primary btn-lg" role="button" href="https://ec.europa.eu/futurium/en/industrial-enabling-tech/sixsq">Vote Now &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
