Add Connecting Citizen event to homepage

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -223,16 +223,16 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>Vote for SixSq!</h2>
-                    <h2>Innovation Radar Prize 2017</h2>
+                    <h2>What's coming up?</h2>
+                    <h2>Connecting the Citizen Event</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_innovation_radar.png" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/PS2017-Connecting-Citizen-Smart-Cities.jpg" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Take a minute to vote for SixSq so that we can be one of the winners in the Industrial &amp; Enabling Tech category. Support technology that enables energy efficiency!<center>
-                            <a class="btn btn-primary btn-lg" role="button" href="https://ec.europa.eu/futurium/en/industrial-enabling-tech/sixsq">Vote Now &raquo;</a>
+                  <p>Sign up for the 3rd edition of the Public Sector Transformation Conference in Brussels and find out about the smart cities of the future.<center>
+                            <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/10/31/news-forum-europe-event.html">Read more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
