Improved image for homepage connecting citizen

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -227,7 +227,7 @@
                     <h2>Connecting the Citizen Event</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/PS2017-Connecting-Citizen-Smart-Cities.jpg" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/news/Connecting-Citizen-Smart-Cities.png" alt="blog"/></center>
                   </div>
                 </div>
                 <div>
