Add latest blog to homepage

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -244,17 +244,17 @@
               <div>
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <h2>Latest News</h2>
-                     <h2>SixSq Featured in Euresearch Success Story</h2>
+                    <h2>Latest Blog</h2>
+                     <h2>Improving Emergency Situation Management in Smart Cities</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/euresearch_nuvlabox.jpg" alt="blog"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/logo_mf2c.png" alt="blog"/></center>
                   </div>
                 </div>
                 </div>
-                <p>Thanks to its contribution to a project working on the security of critical infrastructures and industrial systems, SixSq has been showcased in a Euresearch article.</p>
+                <p>Find out how the mF2C project is using edge computing solutions to improve city services.</p>
                 <center>  
-                    <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/08/28/news-euresearch-success-story.html">Read more &raquo;</a>
+                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/blog/improving-emergency-situation-management-smart-cities">Find out about Fog &raquo;</a>
                 </center>
               </div>
             </div>
