Add edge computing to home page

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -31,7 +31,7 @@
             	  {% if page.subtitle %}
             	    {{ page.subtitle }}
             	  {% else %}
-            	    SixSq: Cloud Neutral Solutions
+            	    SixSq: Cloud &amp; Edge Solutions
                 {% endif %}
               	</h1>
                 {% if page.summary %}
@@ -58,6 +58,31 @@
       </div>
     </div>
     
+  	<div class="jumbotron">
+      <div class="container">
+          <h2>The Edge in Action. SixSq's NuvlaBox combines all the benefits of cloud and edge compuuting. </h2>
+          <div style="background-color: white; padding: 20px">
+              <div style="padding-bottom: 20px;" class="row row-summary">
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <center>
+                        <h3>Minimum 30% savings with Volumlight Smart Street Lighting</h3>
+                        <img class="img-responsive" src="/img/content/street_lighting.jpg" alt="street lighting photo" />
+                    </center>
+                  </div>
+                  <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                    <center>
+                        <h3>Delivering Innovative IT to Remote Communities</h3>
+                      <img class="img-responsive" src="/img/content/remote_communities.jpg" alt="remote communities photo" />
+                    </center>
+                  </div>
+              </div>
+              <center>
+                  <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox/usecases">Find out more &raquo;</a>
+              </center>
+          </div>
+      </div>
+    </div>
+	
   	<div class="jumbotron">
       <div class="container">
           <h2>Our products and services</h2>
