Add Solutions Brief to resources and re-order nav bar

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -47,10 +47,11 @@
 			            <ul class="multi-column-dropdown">
                     <li><!--<a href="/resources/for-all/overview">--><strong>For Everyone</strong><!--</a>--></li>
                     <li><a href="/products_and_services">Porfolio Overview</a></li>
+                    <li><a href="/eguides">eGuides</a></li>
+                    <li><a href="/solutions_brief">Solutions brief</a></li>
                     <li><a href="http://media.sixsq.com/blog">Blog</a></li>
                     <li><a href="/news">News</a></li>
                     <li><a href="/videos">Videos</a></li>
-                    <li><a href="/eguides">eGuides</a></li>
                     <li><a href="/personae">Our users</a></li>
                     <li><a href="/r-and-d">R&amp;D</a></li>
 			            </ul>
