Re-size home page image and small text change

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -65,7 +65,7 @@
               <div style="padding-bottom: 20px;" class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <center>
-                        <h3>Minimum 30% savings with Volumlight Smart Street Lighting</h3>
+                        <h3>30% savings with Volumlight Smart Street Lighting</h3>
                         <img class="img-responsive" src="/img/content/street_lighting.jpg" alt="street lighting photo" />
                     </center>
                   </div>
