--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -60,7 +60,7 @@
     
   	<div class="jumbotron">
       <div class="container">
-          <h2>The Edge in Action: NuvlaBox combines all the benefits of cloud and edge compuuting. </h2>
+          <h2>The Edge in Action: NuvlaBox combines all the benefits of cloud and edge computing. </h2>
           <div style="background-color: white; padding: 20px">
               <div style="padding-bottom: 20px;" class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
