Add HPE event to homepage

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -249,15 +249,15 @@
                 <div class="row row-summary">
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <h2>What's coming up?</h2>
-                    <h2>Geneva - International Campus of Innovation</h2>
+                    <h2>HPE Discover Madrid</h2>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/news/geneva-campus-innovation.jpg" alt="news"/></center>
+                    <center><img style="margin-top: 5px; max-width: 150px;" src="/img/content/news/Discover-madrid-2017.jpeg" alt="news"/></center>
                   </div>
                 </div>
                 <div>
-                  <p>Sign up for GE=Ci2, an exceptional event bringing together Geneva's top players in innovation.<center>
-                            <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/11/09/news-geneva-innovation-event-november-2017.html">Read more &raquo;</a>
+                  <p>Join SixSq at HPE's largest IT event of the year to find out about digital transformation, hybrid IT and the intelligent edge. <center>
+                            <a class="btn btn-primary btn-lg" role="button" href="http://sixsq.com/resources/2017/11/26/news-hpe-discover-november-2017.html">Read more &raquo;</a>
                         </center>
                       <center> <a /></a> </p>
                 </div>
