--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -13,7 +13,7 @@
 							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 						</ul>
-            <p class="text-white">Original web design by  <a class="text-white" href="http://trust-it.com" style="margin: 0 5px">Trust-IT</a></p>
+            <p class="text-white">Original web design by <a class="text-white" href="https://www.trust-itservices.com" style="margin: 0 5px">Trust-IT</a></p>
 					</div>
 					<div class="col-md-4 text-right terms">
 						<p><a href="/about/terms">Terms &amp; conditions</a></p>
