--- a/sass/theme/_section-article.scss
+++ b/sass/theme/_section-article.scss
@@ -6,4 +6,18 @@
     margin-top: 10px;
     margin-bottom: 20px;
 	}
+  strong {
+    font-size: 110%;
+  }
+  img {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    max-height: 21em;
+  }
+  ol, ul {
+    margin-left: 20px;
+    margin-bottom: 20px;
+    padding: 0;
+    list-style: inherit;
+  }
 }
