--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -76,7 +76,7 @@
 				<div class="row">
 					<div class="col-lg-6 col-md-6 col-sm-12">
 						<div class="section-title text-center">
-							<h2 class="pb-10 fw700">What people say about us?</h2>
+							<h2 class="pb-10 fw700">What people say about us.</h2>
 							<div class="widget-section text-center mt-20"><i class="fa fa-circle"></i></div>
 						</div>
 						<div class="news-homepage-carousel active-screen-news animated">
